See CHANGES.md for a list of changes.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "i45-jslogger",
   "version": "1.0.0",
   "description": "A simple JavaScript logger for capturing and outputting to the console and local storage.",
-  "main": "logger.js",
+  "main": "./dist/logger.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "checkin": "git add . && git commit -m 'See CHANGES.md for a list of changes.'",
