--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "checkin": "git add . && git commit -m 'See CHANGES.md for a list of changes.'",
-    "build": "cp -r src/* dist/"
+    "build": "cp -r src/* dist/",
+    "dev": "vite",
+    "vite-build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "files": [
     "/dist",
@@ -23,6 +27,21 @@
     "javascript",
     "logger"
   ],
+  "dependencies": {
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.33.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.0",
+    "eslint": "^9.33.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "vite": "^7.1.2"
+  },
   "author": "CIS Guru <cisguru@outlook.com>",
   "license": "ISC",
   "homepage": "https://github.com/xnodeoncode/i45-jslogger",
