--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "checkin": "git add . && git commit -m 'See CHANGES.md for a list of changes.'",
-    "build": "cp -r src/* dist/",
+    "build": "cp -r src/logger.js dist/ && cp -r src/iLogger.js dist/ && cp -r src/iLoggerValidator.js dist/",
     "dev": "vite",
     "vite-build": "vite build",
     "lint": "eslint .",
